--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Build application for macOS
         run: npx pkg . --output pvmount --target node18-macos-x64
 
+      - name: Check the built file exists
+        run: ls -la ./pvmount
+
   release:
     needs: build
     runs-on: ubuntu-latest
