--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install
 
       - name: Build application for macOS
-        run: npx pkg . --output pvmount --target node18-macos-x64
+        run: npx pkg pvmount.js --output pvmount --target node18-macos-x64
 
       - name: Check the built file exists
         run: ls -la ./pvmount
