--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -28,33 +28,9 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Upload release artifact
-        uses: actions/upload-artifact@v2
+      - name: Upload release asset
+        uses: softprops/action-gh-release@v1
         with:
-          name: pvmount
-          path: ./pvmount
-
-      - name: Create GitHub Release
-        id: create_release
-        uses: actions/create-release@v1
+          files: ./pvmount
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: v${{ github.run_number }}
-          release_name: Release ${{ github.run_number }}
-          body: |
-            Changes in this Release:
-            - Describe your changes here
-          draft: false
-          prerelease: false
-
-      - name: Upload release artifact
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./pvmount
-          asset_name: pvmount
-          asset_content_type: application/octet-stream
