--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -24,22 +24,30 @@ jobs:
       - name: Build application for macOS
         run: npx pkg pvmount.js --output pvmount --target node18-macos-x64
 
-      - name: Tag commit with version
-        run: |
-          TAG_VERSION="v1.${{ github.run_number }}"
-          git tag -a $TAG_VERSION -m "Release $TAG_VERSION" ${{ github.sha }}
-          echo "::set-output name=tag_version::$TAG_VERSION"
-        id: tag
-
-      - name: Push tag
-        uses: ad-m/github-push-action@v0.6.0
-        with:
-          tags: ${{ steps.tag.outputs.tag_version }}
-
   release:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Upload release artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: pvmount
+          path: ./pvmount
+
+      - name: Create GitHub Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: v${{ github.run_number }}
+          release_name: Release ${{ github.run_number }}
+          body: |
+            Changes in this Release:
+            - Describe your changes here
+          draft: false
+          prerelease: false
+          
       - name: Upload release asset
         uses: softprops/action-gh-release@v1
         with:
