--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -28,12 +28,6 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Upload release artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: pvmount
-          path: ./pvmount
-
       - name: Create GitHub Release
         id: create_release
         uses: actions/create-release@v1
@@ -47,10 +41,14 @@ jobs:
             - Describe your changes here
           draft: false
           prerelease: false
-          
-      - name: Upload release asset
-        uses: softprops/action-gh-release@v1
-        with:
-          files: ./pvmount
+
+      - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: ./pvmount
+          asset_name: pvmount
+          asset_content_type: application/zip
