--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -24,10 +24,6 @@ jobs:
       - name: Build application for macOS
         run: npx pkg pvmount.js --output pvmount --target node18-macos-x64
 
-  release:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
       - name: Create GitHub Release
         id: create_release
         uses: actions/create-release@v1
@@ -49,6 +45,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./pvmount
+          asset_path: ./
           asset_name: pvmount
-          asset_content_type: application/zip
+          asset_content_type: application/octet-stream
